Remove anchor padding due to wrapping issues on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,16 +32,6 @@ hr {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
-a {
-	padding-left: 2px;
-	padding-right: 2px;
-}
-a.first {
-	padding-left: 0px;
-}
-a.last {
-	padding-right: 0px;
-}
 a:link {
 	color: white;
 }
